--- a/css/main.css
+++ b/css/main.css
@@ -5,9 +5,7 @@ html {
 body {
   margin: 0;
   background-color: #F1ECEC;
-  font-family: 'Roboto', sans-serif;
   text-align: center;
-  font-size: 10px;
 }
 
 header {
@@ -16,14 +14,21 @@ header {
 
 
 h2 {
-  font-weight: 600;
+  font-weight: 700;
   font-size: 5rem;
   color: #0009FF;
-  font-family: -apple-system, BlinkMacSystemFont, helvetica, 'Roboto', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Roboto', sans-serif;
+  margin-bottom: 6rem;
 }
 
 p {
-  font-weight: 300;
-    font-size: 2rem;
-    font-family: 'Lato', sans-serif;
+  font-weight: 200;
+    font-size: 2.4rem;
+    color: #756464;
+    line-height: 3.4rem;
+    letter-spacing: 0.1rem;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+    font-family: -apple-system, BlinkMacSystemFont, 'Lato', 'Helvetica Neue',
+  Helvetica, sans-serif;
 }
